assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&family=Protest+Riot&display=swap');

/* Asterisk wildcard selector to override default browser styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    max-width: 100%;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    color: #0d0c0c;
    font-family: 'Nunito Sans', sans-serif;
}

/*  Header */
header {
    background-color: #ffffff;
    padding: 5px 10px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    position: fixed;
    z-index: 99;
    width: 100%;
}

h1, h2, h3 {
    font-family: 'Protest Riot', sans-serif;
}

header a {
    text-decoration: none;
    color: #0d0c0c;
}

#menu {
    font-size: 105%;
    display: block;
    padding-left: 1em;
}

nav a {
    text-decoration: none;
    color: #0d0c0c;
}

nav li {
    margin-bottom: 3%;
    list-style-type: none;
}

.active {
    border-bottom: 1px solid #51504f;
}

/* I followed the nav bar toggle code structure from Love Running project for this section */
/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #51504f;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    background-color: #ffffff;
    /* Make main element push footer down */
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 53px;
    display: flex;
    flex-direction: column;
}

#intro {
    display: flex;
    flex-direction: column;
    background-color: #65cbfc;
}

#book-club-image img {
    height: 100%;
}

#welcome {
    margin: 2rem;
    text-align: center;
    font-size: 80%;
    line-height: 200%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* About Us */
#about-us {
    background-color: #ffffff;
    font-size: 0.9em;
    padding: 20px;
    line-height: 150%;
    text-align: center;
}

#about-us h2 {
    margin: 20px 0 10px;
}

/* Testimonials */
#testimonials h2 {
    display: none;
}

.quotes {
    display: flex;
    flex-wrap: wrap;
}

.quotes>div {
    color: #0d0c0c;
    padding: 15px;
    text-align: center;
    flex-basis: auto;
    flex-grow: 1;
    margin: auto;
    max-width: 300px;
    max-height: 300px;
}

.quotes-images {
    height: 90vw;
    width: 90vw;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 100px;
    max-height: 100px;
    margin: 10px auto;
}

#quotes-image-one {
    background: url('../images/man-reading.webp') no-repeat center / cover;
}

#quotes-image-two {
    background: url('../images/woman-reading-2.webp') no-repeat center / cover;
}

#quotes-image-three {
    background: url('../images/man-reading-2.webp') no-repeat center / cover;
}

#quotes-image-four {
    background: url('../images/woman-reading.webp') no-repeat center / cover;
}

/* Current Reading Page */
#new-book {
    display: flex;
    flex-direction: column;
}

#current-reading>h1 {
    display: none;
}

.book-cover {
    display: flex;
    justify-content: center;
    margin: 5% auto;
}

.book-cover img {
    box-shadow: 2px 2px 2px 2px #51504f;
    border: 1px solid #0d0c0c;
    width: 50%;
}

.book-info {
    padding: 1rem 3rem;
    text-align: justify;
}

#questions {
    padding: 1rem 3rem;
    background-color: #ffffff;
}

#questions h2 {
    margin-bottom: 3%;
}

#questions li {
    margin-bottom: 2%;
}

#meetups {
    margin: 30px;
    text-align: center;
}

#dates {
    margin: 20px;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

#dates div {
    color: #0d0c0c;
    text-align: center;
    margin: 30px;
    max-width: 400px;
    max-height: 400px;
}

/* Signup Page */

#signup {
    background-image: url("../images/stack-of-books.jpg");
    background-size: cover;
    object-fit: cover;
    padding: 20px 10%;
    flex-grow: 1;
}

#signup-form {
    color: #0d0c0c;
    background-color: rgba(30, 139, 195, 0.4);
    padding: 30px;
}

#signup-form>label {
    display: block;
}

#signup h1 {
    display: none;
}

#signup h2 {
    margin-bottom: 5px;
}

#signup h3 {
    margin: 5px 0 5px;
}

.text-input, textarea {
    background: #ffffff;
    color: #0d0c0d;
    width: 90%;
    height: 20px;
    margin: 1px 0;
    border: 1px solid #51504f;
    border-radius: 2px;
}

#join-button {
    margin-top: 10px;
    border-radius: 2px;
    padding: 5px 10px;
    font-size: 100%;
    background-color: #ef9329;
    color: #0d0c0c;
    border-color: #0d0c0c;
    box-shadow: 2px 2px 2px #51504f;
}

/* Footer */
footer {
    background-color: #65cbfc;
}

#social-networks {
    text-align: center;
    padding: 15px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 130%;
    color: #0d0c0c;
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;

    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 120%;
        line-height: 75px;
        margin: 0 1rem;
    }

    main {
        /* Add margin at the top to prevent content from being covered by the header */
        margin-top: 84px;
    }

    /* Inrtoduction */
    #intro {
        flex-direction: row;
    }

    #book-club-image {
        width: 60%;
    }

    #welcome {
        width: 40%;
    }

    #about-us {
        padding: 40px;
    }
 
    /* Current reading */
    .book-cover img {
        width: 60%;
    }

    /* Form */
    #signup {
        background-position: center;
    }

    #signup-form {
        max-width: 500px;
        margin: 5% 0 0 12%;

    }
}

/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    
    body {
        font-size: 1.1em;
    }

    h1, h2 {
        font-size: 1.5em;
    }

    #menu a:hover {
        border-bottom: 1px solid #51504f;
    }

    #welcome {
        padding: 0 5%;
        font-size: 105%;
    }

    #about-us {
        padding: 0 10%;
    }

    #testimonials, #dates {
        font-size: 0.9em;
    }

    /* Current Reading */
    #current-reading {
        display: flex;
    }

    #new-book {
        width: 50%;
    }

    .book-info {
        align-items: center;
        padding: 1rem 5rem;
    }

    #questions {
        font-size: 1.1rem;
        width: 50%;
        margin: auto;
    }
}

